deploy/k8s/1_main_app/10_app_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-app-deployment
  labels:
    app: main-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main-app
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: main-app
    spec:
      containers:
        - name: main-app
          image: karridin/homework-5:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 80
