deploy/k8s/1_main_app/20_app_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-app-service
  labels:
    app: main-app
spec:
  type: ClusterIP
  selector:
    app: main-app
  ports:
    - name: 80tcp
      port: 80
      protocol: TCP
      targetPort: 8000
