deploy/k8s/1_main_app/80_app_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hw3-ingress
  labels:
    app: hw3-service
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hw3-service
                port:
                  number: 80
